# adventofcode

2022/cpp/: CMakeLists.txt  run.sh
2022/cpp/day1/src/: main.cpp
2022/rust/day1/: Cargo.toml
2022/rust/day2/: Cargo.toml
2022/rust/day2/src/: rps.rs
2022/rust/day5/src/: main.rs
2022/rust/day6/: Cargo.toml
2022/rust/day7/maybe/: maybe.rs
2023/rust/day1/src/: main.rs
cpp/: run.bat
cpp/day1/src/: main.cpp
day1/src/: elves.rs  main.rs
rust/day2/src/: main.rs  rps.rs
rust/day3/: Cargo.toml
rust/day3/src/: main.rs
rust/day4/src/: main.rs
rust/day5/: Cargo.toml
rust/day5/src/: main.rs
rust/day6/src/: main.rs
rust/day7/: Cargo.toml
rust/day7/src/: main.rs  system.rs
